syntax = "proto3";

package loto;

option go_package = "./loto";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service Loto {
  rpc GetWinners (LotoRequest) returns (LotoResponse) {
    option (google.api.http) = {
      get: "/api/getDraw",
    };
  }

  rpc UploadData (UploadDataRequest) returns (UploadDataResponse) {
    option (google.api.http) = {
      get: "/api/uploadData",
    };
  }

  rpc FillPrizesTable (UploadDataRequest) returns (UploadDataResponse) {
    option (google.api.http) = {
      get: "/api/fillPrizesTable",
    };
  }
}

message LotoRequest {
}

message LotoResponse {
  repeated Participants list = 1;
}

message Participants {
  int64 ticketNumber = 1;
  string name = 2;
  string surname = 3;
  string middle_name = 4;
  string phone = 5;
  string spi = 6;
  string prize = 7;
}

message UploadDataRequest {
}

message UploadDataResponse {
  bool success = 1;
  string message = 2;
}

message FillPrizesTableRequest {
}

message FillPrizesTableResponse {
  bool success = 1;
  string message = 2;
}